# Local-SDFT

./: .gitignore  DESIGN_VARIANT.md  README.md  pyproject.toml
bsub_outputs/: continual_256371.err  continual_256371.out  continual_256406.err  continual_256406.out  continual_256456.err  continual_256456.out  correct_260839.err  correct_260839.out  correct_260860.err  correct_260860.out  correct_260883.err  correct_260883.out  correct_261058.err  correct_261058.out  demo_255437.err  demo_255437.out  demo_255445.err  demo_255445.out  demo_255464.err  demo_255464.out  demo_255487.err  demo_255487.out  demo_255508.err  demo_255508.out  demo_255513.err  demo_255513.out  inbox_256318.err  inbox_256318.out  inbox_256323.err  inbox_256323.out  inbox_256327.err  inbox_256327.out  toolcall_255620.err  toolcall_255620.out
configs/: bfcl_eval.yaml  bfcl_eval_1_2b.yaml  default.yaml  demo_continual.yaml  demo_correct_once.yaml  demo_house_style.yaml  demo_inbox.yaml  demo_lifelong.yaml  demo_sqlite.yaml  demo_toolcall.yaml  geek_jokes.yaml  geek_jokes_bench.yaml  geek_jokes_trained.yaml  lfm25_alpacaeval2_trained.yaml  online.yaml  online_learning.yaml  openclaw_demo_eval.yaml  openclaw_rl_eval.yaml  openclaw_tooluse_sdft.yaml
data/: inbox_triage.json  openclaw_demo.jsonl  openclaw_eval_heldout.jsonl  openclaw_split_manifest.json  openclaw_tooluse.jsonl  openclaw_tooluse_sdft.jsonl
docs/: DEMO.md  DEMO_QUICKSTART.md  IMPLEMENTATION.md  OPENCLAW.md  architecture.md  openclaw-rl-eval.md  openclaw-tooluse-sdft.md  shared-contract.md
drafts/: linkedin-online-sft-triage.md
notebooks/: local_sdft_colab.ipynb  online_sdft_colab.ipynb
scripts/: build_bfcl_train_data.py  build_openclaw_tooluse_data.py  bv-demo.sh  demo_continual.py  demo_continual.sh  demo_correct_once.py  demo_correct_once.sh  demo_inbox.py  demo_inbox.sh  demo_lifelong.py  demo_lifelong.sh  demo_sqlite.py  demo_sqlite.sh  demo_toolcall.py  demo_toolcall.sh  draw_loop_diagram.py  phdcomics_joke_builder.py  run_alpaca_eval.py  run_baselines.py  run_batch1_comparison.py  run_bfcl_baselines.py  run_bfcl_eval.py  run_openclaw_ablation.py  run_openclaw_rl_eval.sh  run_openclaw_tooluse_sdft.sh  run_sdft.py  run_triage_showcase.py  scrape_phdcomics.py  sweep_sdft.py  triage_common.py
sdft/: __init__.py  (+15 more)
(+115 files in other folders)
