[project]
name = "local-sdft"
version = "0.1.0"
description = "Local self-distillation fine-tuning (SDFT) of Liquid AI LFM2.5-230M with LoRA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "transformers>=4.54",
    "trl>=0.19",
    "peft>=0.15",
    "accelerate>=1.6",
    "datasets>=3.6",
    "pyyaml>=6.0",
]

[tool.uv]
# Dependency-only project: run modules with `uv run python -m sdft.<module>`
package = false
