[project]
name = "local-sdft"
version = "0.1.0"
description = "Local self-distillation fine-tuning (SDFT) of Liquid AI LFM2.5-230M with LoRA — offline pipeline + online serve-while-learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "transformers>=4.54",
    "trl>=0.19",
    "peft>=0.15",
    "accelerate>=1.6",
    "datasets>=3.6",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
toolcall = ["jinja2>=3.0"]
alpacaeval = ["alpaca-eval>=0.6"]
# Online serve-while-learning UI/server (sdft.online.serve). Core online loop
# and CLI need no extra deps beyond the base.
online = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "rich>=13",
]
dev = [
    "pytest>=8",
    "numpy>=1.26",   # reference KL loss tests (sdft/online/loss.py)
    "httpx>=0.27",   # fastapi TestClient
]

[tool.uv]
# Dependency-only project: run modules with `uv run python -m sdft.<module>`
package = false
